edit of donkey car section

--- a/051-DonkeyCar.Rmd
+++ b/051-DonkeyCar.Rmd
@@ -3,11 +3,61 @@
 In December 2018 I switched from sunfounder to donkeycar 
 [Donkey Car](http://www.donkeycar.com "Donkey Car's Homepage")
 
-## Reason for changeing the plattform
-The sunfounder was wonderful to learn the basics, PWM, I2C, use of camera with Pi, but had shortcommings in the steering mechanism. The steering angle was not reproducable, i.e. sending twice the same steering command did result in different steering angles of about a few degrees difference. Now since the aim of the game is to train a neural net which takes the commanded steering angle as ground truth this was a show stopper for me => Donkey Car
+## Reason for changing the plattform
+The sunfounder was wonderful to learn the basics, PWM, I2C, use of camera with Pi, but had shortcommings in the steering mechanism. The steering angle was not reproducable, i.e. sending twice the same steering command did result in different steering angles of about a few degrees difference. Now since the aim of the game is to train a neural net which takes the commanded steering angle as ground truth this was a show stopper for me and therefore i moved to => Donkey Car  
+
 Second reason, other members of the group [Esslinger Makerspace Projekt: Autonomen RoboCar bauen](https://www.meetup.com/Esslingen-Makerspace/ "Homepage of the meetup")  opted for donkey car
 
 
-![Merging sunfounder and donkeycar](images/SunFounderDonkeyMerge.jpg)
+## What to do
+
+- disassemble the sunfounder, by taking of the plate on which the raspberry is mounted
+- disassemble the L298N H-bridge, not needed if you use an [ESC](https://en.wikipedia.org/wiki/Electronic_speed_control) 
+- connect the [PWM] signal of your PCA9685 to the new car
+    - channel 0 => steering
+    - channel 1 => throttle
+- [Install Software on Pi and Host Computer](http://docs.donkeycar.com/guide/install_software/#get-the-raspberry-pi-working)
+    - Setup RaspberryPi
+    - Setup Mac Host PC (or windows or linux host)
+    
+    
+- [Calibrate your car](http://docs.donkeycar.com/guide/calibrate/)
+- [Drive your car](http://docs.donkeycar.com/guide/get_driving/)
+- [Train an autopilot with Keras](http://docs.donkeycar.com/guide/train_autopilot/)
+- [http://docs.donkeycar.com/guide/simulator/](http://docs.donkeycar.com/guide/simulator/)
+
+-  Select web or pysical controller [Controller Parts](http://docs.donkeycar.com/parts/controllers/#physical-joystick-controller)
+
+### Folders created during installation of host PC
+- /Users/uwesterr/mycar/models
+- /Users/uwesterr/mycar/data
+- /Users/uwesterr/mycar/logs
+
+
+**Note**, there seems to be an issue with driving two servos with PCA9685 at the same time. What happens is that steering and throttle work during calibartion but not when the car is controlled via the web interface. TBC
+
+A possible cure is described at [Adafruit 16 Channel Servo Driver with Raspberry Pi](https://cdn-learn.adafruit.com/downloads/pdf/adafruit-16-channel-servo-driver-with-raspberry-pi.pdf ). 
+
+
+
+
+>When to add an optional Capacitor to the driver board
+We have a spot on the PCB for soldering in an electrolytic capacitor. Based on your usage, you may or may not need a
+capacitor. If you are driving a lot of servos from a power supply that dips a lot when the servos move, n * 100uF where n is the number of servos is a good place to start - eg 470uF or more for 5 servos. Since its so dependent on servo current draw, the torque on each motor, and what power supply, there is no "one magic capacitor value" we can suggest which is why we don't include a capacitor in the kit.
+
+I did **not** check whether this works.
+
+For [RPI SERVO HAT](https://www.reichelt.de/raspberry-pi-servo-hat-16-kanal-pwm-rpi-servo-hat-p235533.html?) that problem was not seen.
+
+
+[SETTING WIFI UP VIA THE COMMAND LINE](https://www.raspberrypi.org/documentation/configuration/wireless/wireless-cli.md "DOCUMENTATION > CONFIGURATION > WIRELESS > WIRELESS-CLI")
+
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=2, paged.print=FALSE, eval=FALSE}
+library(knitr)
+include_graphics("images/SunFounderDonkeyMerge.jpg")
+```
+
+
 
 
