--- a/05-RoboCarLogBook.Rmd
+++ b/05-RoboCarLogBook.Rmd
@@ -536,6 +536,31 @@ At shackspace go to http://leases.shack/#/ (only available from the shackspace n
 
 and then connect via ssh pi@ipAdress 
 
+if you get 
+```
+Uwes-MBP:data uwesterr$ ssh pi@10.42.26.33
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+@    WARNING: REMOTE HOST IDENTIFICATION HAS CHANGED!     @
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+IT IS POSSIBLE THAT SOMEONE IS DOING SOMETHING NASTY!
+Someone could be eavesdropping on you right now (man-in-the-middle attack)!
+It is also possible that a host key has just been changed.
+The fingerprint for the ECDSA key sent by the remote host is
+SHA256:aYMRAzv3GpxqJNugz1oTi20m0QKVIVfVxszQkJNbNqg.
+Please contact your system administrator.
+Add correct host key in /Users/uwesterr/.ssh/known_hosts to get rid of this message.
+Offending ECDSA key in /Users/uwesterr/.ssh/known_hosts:20
+ECDSA host key for 10.42.26.33 has changed and you have requested strict checking.
+Host key verification failed.
+```
+
+then you have to remove the cached key for donkeypi-uwe (or the old IP adress) on the local machine:
+
+```
+ssh-keygen -R donkeypi-uwe
+```
+
+
 ## Store snapshots of video stream on local computer
 Donkey car stores training data on raspi SD card. In this concept the XBox controller is connected via USB to a laptop (in my case a Mac) and it makes sense to store the traing data on the laptop as well since we anyway will train the NN on that machine.
 
